# AuiCApp

./: CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h  Task.h
tests/: SumTest.cpp
